# matsuri-contest-log

./: .gitignore  CMakeLists.txt  README  build.go  build.sh  config_window.go  config_window_contest.go  config_window_macro.go  config_window_rig.go  config_window_system.go  cwhelper.go  file_chooser.go  generate_proto  go.mod  go.sum  gui.go  gui_helper.go  main.go  main_window.go  package.json  renderMacro.go  rigctrl.go
_example_contests/: README.md  cqwwssb.lookup.csv  cqwwssb.mclcontest.lua  dx.mclcontest.lua  wapc.lua  wapcssb.mclcontest.lua
adif/: adif.go  adif_test.go  band.go  cook.go
binlogserver/: binlog.go  server.go
config/: config.go
embed/: main.go
gui/: pubspec.yaml
gui/go/: hover.yaml
gui/go/cmd/: main.go  options.go
gui/lib/: gui_state.dart  last_qso_table.dart  load_or_create_contest.dart  log.dart  main.dart  qso.dart  radio.dart  settings.dart  support.dart  theme.dart  title.dart
gui/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
gui/test/: widget_test.dart
gui_backend/: .metadata  README.md  pubspec.yaml
gui_backend/example/: README.md  pubspec.yaml
gui_backend/lib/: gui_backend.dart  gui_backend_method_channel.dart  gui_backend_platform_interface.dart
gui_backend/linux/: CMakeLists.txt  gui_backend_plugin.cc
gui_backend/macos/: gui_backend.podspec
gui_backend/test/: gui_backend_method_channel_test.dart  gui_backend_test.dart
gui_backend/windows/: CMakeLists.txt  gui_backend_plugin.cpp  gui_backend_plugin.h  gui_backend_plugin_c_api.cpp
gui_lib/: .metadata  README.md  ffigen.yaml  pubspec.yaml
gui_lib/example/: README.md  pubspec.yaml
gui_lib/lib/: gui_lib.dart  gui_lib_bindings_generated.dart
gui_lib/linux/: CMakeLists.txt
gui_lib/src/: CMakeLists.txt  mcl.h
gui_lib/windows/: CMakeLists.txt
guiserver/: check_partial.go  contest_support.go  draft.go  lua.go  server.go
hamlib/: LICENSE  dummyrig_test.go  goHamlib.go  goHamlib_test.go  rig.c  rig.go
logdb/: contest.go  log.go  qso.go  uid.go
morsecode/: table.go
proto/: common.pb.go  common.proto  mcl.pb.go  mcl.proto  mcl_grpc.pb.go  mclgui.pb.go  mclgui.proto  mclgui_grpc.pb.go  radio.pb.go  radio.proto  radio_grpc.pb.go
radio/: radio.go  radioserver.go
resources/: dbinit.sql  gui.css  gui.glade  gui.go
resources/licenses/: GPL.txt
server/: server.go
shared/: mcl.h  shared.go
state/: state.go
tui/: create_contest_form.go  logger_main.go  main.go
version/: build.go
webui/: build.sh  devproxy.go  filepicker.go  server.go  translator.go  webmain.go
webui/rpc_gen/: rpc.gen.go
webui/rpcserver/: rpc.ridl  rpc_server.go
webui/ui-project/: README.md  package.json  vue.config.js
webui/web/: index.html  rpc.gen.js
webui/web-src/: README.md  index.html  package-lock.json  package.json  vite.config.js
webui/ws/: ws.go
(+64 files in other folders)
